// Vitest Snapshot v1

exports[`plugins/cache > should add cache config correctly 1`] = `
{
  "cache": {
    "buildDependencies": {
      "browserslistrc": [
        "<ROOT>/packages/builder/webpack-builder/.browserslistrc",
      ],
      "packageJson": [
        "<ROOT>/packages/builder/webpack-builder/package.json",
      ],
    },
    "cacheDirectory": "<ROOT>/packages/builder/webpack-builder/node_modules/.cache/webpack",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > should watch framework config change 1`] = `
{
  "cache": {
    "buildDependencies": {
      "browserslistrc": [
        "<ROOT>/packages/builder/webpack-builder/.browserslistrc",
      ],
      "config": [
        "/path/to/config.js",
      ],
      "packageJson": [
        "<ROOT>/packages/builder/webpack-builder/package.json",
      ],
    },
    "cacheDirectory": "<ROOT>/packages/builder/webpack-builder/node_modules/.cache/webpack",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > should watch tsconfig change 1`] = `
{
  "cache": {
    "buildDependencies": {
      "browserslistrc": [
        "<ROOT>/packages/builder/webpack-builder/.browserslistrc",
      ],
      "packageJson": [
        "<ROOT>/packages/builder/webpack-builder/package.json",
      ],
      "tsconfig": [
        "/path/to/tsconfig.json",
      ],
    },
    "cacheDirectory": "<ROOT>/packages/builder/webpack-builder/node_modules/.cache/webpack",
    "type": "filesystem",
  },
}
`;
